# readfish

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  FAQ.html  MANIFEST.in  README.md  TOML.md  basecalling-params.html  changelog.html  developers-guide.html  example.toml  genindex.html  getting-started.html  guppy-params.html  index.html  objects.inv  post-analysis.html  py-modindex.html  pyproject.toml  readfish.console.html  readfish.html  readfish.plugins.html  requirements.txt  ru_toml.schema.json  search.html  searchindex.js  setup.py  toml.html
.github/: CONTRIBUTING.md  faq.yml
.github/faq/: FAQ.md
.github/workflows/: CI.yml  faqtory.yml  gh_pages.yml  lint.yml  pre-commit.yml  stale.yml
_downloads/8857124ebdcf7d878ada27a8dd023ea4/: development.yml
_downloads/e5cce9a507ee6899044ad73c69e96fe5/: _cli_base.py
_downloads/fb0d0d7ff27f33697ba3b787ec894677/: conf.py
_modules/: index.html
_modules/pybasecall_client_lib/: pyclient.html
_modules/pyguppy_client_lib/: pyclient.html
_modules/readfish/: _cli_args.html  _cli_base.html  _config.html  _loggers.html  _statistics.html  _utils.html
_modules/readfish/plugins/: _no_op.html  abc.html  dorado.html  guppy.html  utils.html
_sources/: basecalling-params.md.txt  developers-guide.md.txt  readfish.rst.txt  toml.md.txt
_static/: documentation_options.js  pygments.css
_static/example_tomls/: barcoded_human.toml  human_bed_file_selection.toml  human_chr_selection.toml  human_chr_selection_two_regions.toml  human_minimap2_extra_params.toml  human_regions_barcoded.toml
docs/: FAQ.md  TOML.md  changelog.md  conf.py  developers-guide.md  getting-started.md  guppy-params.md  index.md  post-analysis.md  readfish.console.rst  readfish.plugins.rst  readfish.rst  test.md  toml.md
docs/_static/example_tomls/: COSMIC_cancer_panel.bed  COSMIC_cancer_panel.csv  barcoded_human.toml  human_bed_file_selection.toml  human_chr_depletion.toml  human_chr_selection.toml  human_chr_selection_two_regions.toml  human_chr_selection_with_control.toml  human_csv_file_selection.toml  human_minimap2_extra_params.toml  human_regions_barcoded.toml
docs/questions/: batch-times.question.md  creating_readfish-environment.question.md  key_error_adapter.md  py-guppy-client-error.question.md  py-guppy-client-version.question.md  readfish-branches.question.md  split-flongle.md
examples/: barcode.toml  human_chr_selection.toml
ru/: __init__.py  _version.py  alex.py  alex_refactor.py  arguments.py  basecall.py  basecall_all.py  centrifuge.py  channels.py  check_classifications.py  cli.py  get_raw_len.py  iteralign.py  iteralign_centrifuge.py  logging_config.py  mapper.py  matt_get_raw_len.py  read_until_client.py  refactor.py  ru_barcode.py  ru_barcode_2.py  ru_barcode_targets.py  ru_gen.py  ru_gen_boss_runs.py  run_until_utils.py  summarise_fq.py  unblock_all.py  utils.py  validate.py
ru/static/: barcode.schema.json  readfish_toml.schema.json  ru_toml.schema.json  targets.schema.json
scripts/: gen_refseq_lookup.py
src/readfish/: __about__.py  __compatability__.py  __init__.py  __main__.py  _channels.py  _cli_args.py  _cli_base.py  _client.py  _compatibility.py  _config.py  _loggers.py  _read_until_client.py  _statistics.py  _utils.py  compatibility.py
src/readfish/entry_points/: stats.py  targets.py  unblock_all.py  validate.py
src/readfish/plugins/: _filter.py  _mappy.py  _no_op.py  abc.py  dorado.py  guppy.py  mappy.py  mappy_rs.py  stingray.py  utils.py
src/readfish/read_until/: LICENSE.md  __init__.py  base.py  read_cache.py
tests/: conftest.py  describe_test.py  stats_test.py  utils_test.py  validation_test.py
tests/static/describe_test/: describe.toml  describe_aligner_barcoded_expected.txt  describe_aligner_barcoded_regions_expected.txt  describe_aligner_regions_expected.txt  describe_barcoded.toml  describe_barcoded_experiment_expected.txt  describe_barcoded_missing.toml  describe_barcoded_regions_experiment_expected.txt  describe_experiment_regions_expected.txt  describe_region_and_barcode.toml  describe_region_and_barcode_missing.toml
tests/static/dorado_validation_test/: README.md
tests/static/mappy_validation_test/: README.md
tests/static/stats_test/: expected_summary.txt  simulated_reads.fastq  stats.tsv  yeast_8kb_contigs_test.mmi  yeast_summary_test.toml  yeast_summary_test_mappyrs.toml
(+39 files in other folders)
